5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1595_2895.log
== TEST (2019-03-26 16:07:02) 
-- CODE:
a = float(input())
b = int(input())
print(a*5+b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:07:09) 
-- CODE:
a = float(input())
b = int(input())
print(a*5+b)
-- EXECUTION TIME:
0.139133
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:16:27) 
-- CODE:
a = float(input())
b = int(input())
c = a*5

print(c+b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:16:30) 
-- CODE:
a = float(input())
b = int(input())
c = a*5

print(c+b)
-- EXECUTION TIME:
0.180434
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:16:31) 
-- CODE:
a = float(input())
b = int(input())
c = a*5

print(c+b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:16:59) 
-- CODE:
a = int(input())
b = float(input())
c = a*5

print(c+b)
-- OUTPUT:
105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:17:02) 
-- CODE:
a = int(input())
b = float(input())
c = a*5

print(c+b)
-- EXECUTION TIME:
0.152664
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
105.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
117.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2205.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:19:09) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*b+b)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:19:10) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*b+b)
-- EXECUTION TIME:
0.143464
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
737.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240825.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:19:12) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*b+b)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:19:13) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*b+b)
-- EXECUTION TIME:
0.195682
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
737.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240825.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:19:19) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*jogs+b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a*jogs+b)
NameError: name 'jogs' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:19:21) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*jogs+b)
-- EXECUTION TIME:
0.133746
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    print(a*jogs+b)
NameError: name 'jogs' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:19:22) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*jogs+b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a*jogs+b)
NameError: name 'jogs' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:19:29) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*jogos+b)
-- OUTPUT:
105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:19:32) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*jogos+b)
-- EXECUTION TIME:
0.260884
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
105.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
117.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2205.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:19:33) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*jogos+b)
-- OUTPUT:
105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:19:34) 
-- CODE:
a = int(input())
b = float(input())
jogos = 5

print(a*jogos+b)
-- EXECUTION TIME:
0.0895619
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
105.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
117.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2205.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:20:25) 
-- CODE:
a = float(input())
f1 = float(input())
f2 = float(input())
f3 = float(input())

jogos = 5

print(a*jogos+f1,f2,f3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f3 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:20:27) 
-- CODE:
a = float(input())
f1 = float(input())
f2 = float(input())
f3 = float(input())

jogos = 5

print(a*jogos+f1,f2,f3)
-- EXECUTION TIME:
0.168844
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    f3 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:21:19) 
-- CODE:
a = float(input())
f1 = float(input())
f2 = float(input())
f3 = float(input())
jogos = 5

print(a*jogos+f1+f2+f3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f3 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:21:21) 
-- CODE:
a = float(input())
f1 = float(input())
f2 = float(input())
f3 = float(input())
jogos = 5

print(a*jogos+f1+f2+f3)
-- EXECUTION TIME:
0.156357
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    f3 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:21:48) 
-- CODE:
a = float(input())
f1 = float(input())
f2 = float(input())
f3 = float(input())
jogos = 5

total = (a*jogos+f1+f2+f3)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f3 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:21:51) 
-- CODE:
a = float(input())
f1 = float(input())
f2 = float(input())
f3 = float(input())
jogos = 5

total = (a*jogos+f1+f2+f3)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f3 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:21:55) 
-- CODE:
a = float(input())
f1 = float(input())
f2 = float(input())
f3 = float(input())
jogos = 5

total = (a*jogos+f1+f2+f3)
print(total)
-- EXECUTION TIME:
0.266436
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    f3 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:57) 
-- CODE:
a = float(input())
f1 = float(input())
f2 = float(input())
f3 = float(input())
jogos = 5

total = (a*jogos+f1)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f3 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:15) 
-- CODE:
a = float(input())
f1 = float(input())
jogos = 5

total = (a*jogos+f1)
print(total)
-- OUTPUT:
105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:35) 
-- CODE:
a = float(input())
f1 = float(input())
jogos = 5

total = (a*jogos+f1)
print(total)
-- OUTPUT:
105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:24:36) 
-- CODE:
a = float(input())
f1 = float(input())
jogos = 5

total = (a*jogos+f1)
print(total)
-- EXECUTION TIME:
0.135592
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
105.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
117.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2205.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:24:37) 
-- CODE:
a = float(input())
f1 = float(input())
jogos = 5

total = (a*jogos+f1)
print(total)
-- EXECUTION TIME:
0.127137
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
105.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
105.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
117.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:24:37) 
-- CODE:
a = float(input())
f1 = float(input())
jogos = 5

total = (a*jogos+f1)
print(total)
-- EXECUTION TIME:
0.146653
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
105.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2205.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:24:37) 
-- CODE:
a = float(input())
f1 = float(input())
jogos = 5

total = (a*jogos+f1)
print(total)
-- EXECUTION TIME:
0.215701
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
117.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
2205.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:58) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("x"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:18) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("x"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:29) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("x"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:33) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:41) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:42) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:42) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:42) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:42) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:43) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:43) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:43) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f2+f1)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:52) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:53) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:53) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:53) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:53) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:53) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:53) 
-- CODE:
a = float(int(input("z"))
f1 = float(input("adijsfajifajas"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:12) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input("adijsfajifajas"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:13) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input("adijsfajifajas"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:16) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input("adijsfajifajas")))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input()))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:30) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input())
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:31) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input())
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:32) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input())
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:43) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input("x"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:45) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input("x"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:45) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input("x"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:45) 
-- CODE:
a = float(int(input("z"))
f1 = float(int(input("x"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    f1 = float(int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:53) 
-- CODE:
a = float(int(input("z"))
b = float(int(input("x"))
f2 = float(int())
total = (a*f1+f2)
print(total)
-- ERROR:
File "XXXX", line 2
    b = float(int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:28:33) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = float(input())
total = (a*f1+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (a*f1+f2)
NameError: name 'f1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:45) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*f1+f2)
print(total)
-- EXECUTION TIME:
0.2652
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total = (a*f1+f2)
NameError: name 'f1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:46) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*f1+f2)
print(total)
-- EXECUTION TIME:
0.120398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total = (a*f1+f2)
NameError: name 'f1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:28:47) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*f1+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (a*f1+f2)
NameError: name 'f1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:53) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.170672
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:54) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.146355
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:54) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.10732
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:55) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.238986
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:55) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.175616
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:55) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.264832
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:56) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.282675
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
715.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:56) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.45391
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:56) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.541522
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:56) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.505813
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
715.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:56) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.397563
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
715.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:56) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.348076
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
715.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:57) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.507421
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:57) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.651805
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:57) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.556408
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:57) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.485697
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
715.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
715.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:28:58) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:58) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.682488
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:58) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.686062
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
715.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:59) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.29515
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
715.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:59) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.27997
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:59) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.331181
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
zx715.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
715.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:59) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.773509
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:59) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.554315
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:59) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.412775
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
715.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:00) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.45288
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:00) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.595752
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:00) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.530359
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
715.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:01) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.153958
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
zx715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
zx239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:02) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.165228
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:02) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.167271
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:03) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.195999
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:03) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:03) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.455078
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
zx239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:03) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:03) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.304629
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
zx715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
zx239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:03) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.207295
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
zx239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:03) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.087745
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.212837
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
zx585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
zx715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.188351
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:05) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:05) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.183675
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
zx585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:05) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.260418
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
715.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
zx239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:05) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:05) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:05) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:05) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.20809
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
zx585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
zx585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:05) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.322078
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
zx715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
zx585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:06) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:06) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.199299
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:06) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:06) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.388072
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:06) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:06) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.350181
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:06) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:06) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- OUTPUT:
585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:07) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.407437
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
715.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:07) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.366456
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:07) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.33976
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
239895.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:07) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.573499
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
715.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
585.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
715.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:07) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.493873
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
585.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
715.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:08) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.513146
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
239895.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
239895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:08) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = 45
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.536528
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:14) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:18) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.187506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:18) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:19) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:19) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:19) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:19) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.187197
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:20) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.316861
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:20) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.28384
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '95.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:20) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:20) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:20) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:20) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:21) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.151858
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:21) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.167315
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:21) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b+f2)
print(total)
-- EXECUTION TIME:
0.214923
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:02) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = ((a*b)+f2)
print(total)
-- EXECUTION TIME:
0.135052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:03) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = ((a*b)+f2)
print(total)
-- EXECUTION TIME:
0.110029
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = ((a*b)+f2)
print(total)
-- EXECUTION TIME:
0.100093
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = ((a*b)+f2)
print(total)
-- EXECUTION TIME:
0.128511
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:04) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = ((a*b)+f2)
print(total)
-- EXECUTION TIME:
0.164689
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:06) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = ((a*b)+f2)
print(total)
-- EXECUTION TIME:
0.144476
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:08) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = ((a*b)+f2)
print(total)
-- EXECUTION TIME:
0.139056
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:08) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = ((a*b)+f2)
print(total)
-- EXECUTION TIME:
0.160304
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:08) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = ((a*b)+f2)
print(total)
-- EXECUTION TIME:
0.249843
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '95.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:19) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b)+f2
print(total)
-- EXECUTION TIME:
0.1558
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:30:23) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b)+f2
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:35) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = int(input())
total = (a*b)+f2
print(total)
-- EXECUTION TIME:
0.141427
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 3, in <module>
    f2 = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:31:23) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = float(input("f"))
total = (a*b)+f2
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:31:33) 
-- CODE:
a = float(input("z"))
b = float(input("x"))
f2 = float(input("f"))
total = (a*b)+f2
print(total)
-- EXECUTION TIME:
0.137678
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
